--- a/tickets_app/templates/tickets_app/base.html
+++ b/tickets_app/templates/tickets_app/base.html
@@ -11,7 +11,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <!-- Main css -->
-    <link rel="stylesheet" type="text/css" href="{% static 'tickets_app/main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'tickets_app/css/main.css' %}">
+
+    <!-- Home css -->
+    <link rel="stylesheet" type="text/css" href="{% static 'tickets_app/css/home.css' %}">
 
     <!--if statement-->
     {% if title %}
@@ -22,47 +25,34 @@
 </head>
 <body>
 <!--navigation-->
-<header class="site-header">
-    <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
-        <div class="container">
-            <a class="navbar-brand mr-4" href="{% url 'tickets-home' %}">Tickets Blog</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarToggle">
-                <div class="navbar-nav mr-auto">
-                    <a class="nav-item nav-link" href="{% url 'tickets-home' %}">Home</a>
-                    <a class="nav-item nav-link" href="{% url 'tickets-about' %}">About</a>
-                </div>
-                <!-- Navbar Right Side -->
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="{% url 'tickets-login' %}">Login</a>
-                    <a class="nav-item nav-link" href="{% url 'tickets-register' %}">Register</a>
-                </div>
-            </div>
+<header>
+     <nav>
+        <div id="nav-logo-area">
+            <img src="{% static 'tickets_app/imgs/twitter.png' %}">
+            <h1>Bilete Teatru</h1>
+        </div>
+        <div id="nav-search-area">
+            <input type="text" placeholder="Cauta spectacole">
+        </div>
+        <div id="nav-login-area">
+            <a href="{% url 'tickets-login' %}" class="login-button">
+                Login  <br> as  customer
+            </a>
+            <a href="{% url 'tickets-login' %}" class="login-button">
+                Login  <br>as  admin
+            </a>
+            <a href="{% url 'tickets-register' %}" class="login-button">
+                Register
+            </a>
+        </div>
+        <div>
         </div>
     </nav>
 </header>
 
-<main role="main" class="container">
-    <div class="row">
-        <div class="col-md-8">
-            {% block content %}{% endblock %}
-        </div>
-        <div class="col-md-4">
-            <div class="content-section">
-                <h3>Our Sidebar</h3>
-                <p class='text-muted'>You can put any information here you'd like.
-                <ul class="list-group">
-                    <li class="list-group-item list-group-item-light">Latest Posts</li>
-                    <li class="list-group-item list-group-item-light">Announcements</li>
-                    <li class="list-group-item list-group-item-light">Calendars</li>
-                    <li class="list-group-item list-group-item-light">etc</li>
-                </ul>
-                </p>
-            </div>
-        </div>
-    </div>
+<main role="main">
+    {% block content %}
+    {% endblock content%}
 </main>
 
 <!-- Optional JavaScript -->
