--- a/tickets_app/templates/tickets_app/home.html
+++ b/tickets_app/templates/tickets_app/home.html
@@ -1,18 +1,41 @@
 <!--in order to not repeat things, we write the unique thing for our home page here, and the template, the thing that repeat in our base file-->
 <!--inherits things that are in base file-->
 {% extends "tickets_app/base.html"%}
+{% load static %}
 {% block content %}
-<!--for statement-->
-{% for post in posts %}
-<article class="media content-section">
-    <div class="media-body">
-        <div class="article-metadata">
-            <a class="mr-2" href="#">{{ post.author }}</a>
-            <small class="text-muted">{{ post.date_posted }}</small>
+ <!-- BEGINNING OF SLIDESHOW -->
+ <div id="slideshow">
+
+    <div id="prevSlide">&lt;</div>
+    {% for post in posts %}
+    <div class="slide">
+        <img class="slideshow-background"
+            src="{%static 'tickets_app'%}{{post.background}}">
+        <div class="slideshow-mask"></div>
+        <div class="slideshow-body">
+            <h2>{{post.titlu}}</h2>
+            <div class="slideshow-content">
+                <div class="slide-info">
+                    <p class="slide-regie">{{post.regie}}</p>
+                    <p class="slide-actori">{{post.actori}}</p>
+                    <br>
+                    <p class="slide-descriere">{{post.descriere}}</p>
+                    <br>
+                    <div class="slide-format">
+                        <div>
+                        <p class="slide-locatie">{{post.locatie}}</p>
+                        <p class="slide-data">{{post.data}}</p>
+                        </div>
+                        <button class="slide-bttn">Cumpara Acum</button>
+                    </div>
+                </div>
+                <img class="slide-img" src="{% static 'tickets_app'%}{{post.img}}">
+            </div>
         </div>
-        <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
-        <p class="article-content">{{ post.content }}</p>
     </div>
-</article>
-{% endfor %}
+    {% endfor %}
+    <div id="nextSlide">&gt;</div>
+</div>
+<!-- END OF SLIDESHOW -->
+<script src="{% static 'tickets_app/scripts/slideshow.js' %}"></script>
 {% endblock content %}
